==> Moddable-OpenSource/moddable/modules/pins/spi/pico/modSPI.c <==
#include "xsmc.h"
#include "mc.xs.h"
#include "xsHost.h"
#include <string.h>
#include <stdlib.h>
#include <errno.h>
#include "modSPI.h"
#include "mc.defines.h"
#define IRAM_ATTR
	#define MODDEF_SPI_MISO_PIN	-1
	#define MODDEF_SPI_MOSI_PIN	19
	#define MODDEF_SPI_SCK_PIN	22
#define SPI_CHUNKSIZE	(480)
	#define MODDEF_SPI_BUFFERSIZE	SPI_CHUNKSIZE

void modSPIInit(modSPIConfiguration config)
{
	int ret;

	if (!config->spi_inst) {
		if (config->spi_port == 1)
			config->spi_inst = spi1;
		else
			config->spi_inst = spi0;
	}

	if (!gSPIInited++) {

		gPrevHz = config->hz;
		spi_init(config->spi_inst, config->hz);
//		spi_init(config->spi_inst, 64000000);
		configSPI(config);

		config->clock_pin = (254 == config->clock_pin) ? MODDEF_SPI_SCK_PIN : config->clock_pin;
		config->mosi_pin = (254 == config->mosi_pin) ? MODDEF_SPI_MOSI_PIN : config->mosi_pin;
		config->miso_pin = (254 == config->miso_pin) ? MODDEF_SPI_MISO_PIN : config->miso_pin;

		if (0xff != config->clock_pin)
			gpio_set_function(config->clock_pin, GPIO_FUNC_SPI);
		if (0xff != config->mosi_pin)
			gpio_set_function(config->mosi_pin, GPIO_FUNC_SPI);
		if (0xff != config->miso_pin)
			gpio_set_function(config->miso_pin, GPIO_FUNC_SPI);

		gSPITxBuffer = c_malloc(MODDEF_SPI_BUFFERSIZE);
		gSPIInited = true;
	}
	//@ check

	if (NULL == gConfig) {
		gConfig = config;
	}

	(config->doChipSelect)(0, config);
}

void modSPIUninit(modSPIConfiguration config)
{
	if (config == gConfig)
		modSPIActivateConfiguration(NULL);

	if (0 == --gSPIInited) {
		spi_deinit(config->spi_inst);
		if (gSPITxBuffer) {
			c_free(gSPITxBuffer);
			gSPITxBuffer = NULL;
		}
	}
}

void modSPITxRx(modSPIConfiguration config, uint8_t *data, uint16_t count)
{
	int ret;

	modSPIActivateConfiguration(config);

	if (count > 255) {		// need to loop
		modLog("TxRx over 255 bytes unimplemented");
		return;
	}

	ret = spi_write_read_blocking(config->spi_inst, data, (uint8_t*)gSPITxBuffer, count);

	c_memcpy(data, gSPITxBuffer, count);
}

static void modSPITxCommon(modSPIConfiguration config, uint8_t *data, uint16_t count, modSPIBufferLoader loader)
{
	uint16_t bitsOut;
	uint32_t loaded;
	int ret;

	modSPIActivateConfiguration(config);

	while (count > 0) {
		loaded = (loader)(data, (count <= SPI_CHUNKSIZE) ? count : SPI_CHUNKSIZE, &bitsOut);
		count -= loaded;
		data += loaded;
		ret = spi_write_blocking(config->spi_inst, (uint8_t*)gSPITxBuffer, loaded);
		// check ret
	}

//	always sync
//	if (config->sync)
//		modSPIFlush();
}
