==> SamuelMarks/moddable/modules/pins/spi/nrf52/modSPI.c <==
#include "xsmc.h"
#include "mc.xs.h"
#include "xsHost.h"
#include <string.h>
#include <stdlib.h>
#include <errno.h>
#include "modSPI.h"
#include "mc.defines.h"
#define IRAM_ATTR
	#define MODDEF_SPI_MISO_PIN	NRF_GPIO_PIN_MAP(0,2)
	#define MODDEF_SPI_MOSI_PIN	NRF_GPIO_PIN_MAP(1,15)
	#define MODDEF_SPI_SCK_PIN	NRF_GPIO_PIN_MAP(1,14)
	#define MODDEF_SPI_BUFFERSIZE	(240 * kSPITransfers)
#define SPI_QUEUE_LENGTH	15

void modSPIInit(modSPIConfiguration config)
{
	int ret;

	if (!gSPIInited) {
		config->spi_config.sck_pin = MODDEF_SPI_SCK_PIN;
		config->spi_config.mosi_pin = MODDEF_SPI_MOSI_PIN;
		config->spi_config.miso_pin = MODDEF_SPI_MISO_PIN;
//		config->spi_config.ss_pin = config->cs_pin;
		config->spi_config.ss_pin = NRF_DRV_SPI_PIN_NOT_USED;
		config->spi_config.irq_priority = APP_IRQ_PRIORITY_LOWEST;
		config->spi_config.orc = 0xFF;

		switch (config->mode) {
			case 3:
				config->spi_config.mode = NRF_DRV_SPI_MODE_3;	// CPOL = 1, CPHA = 1
				break;
			case 2:
				config->spi_config.mode = NRF_DRV_SPI_MODE_2;	// CPOL = 1, CPHA = 0
				break;
			case 1:
				config->spi_config.mode = NRF_DRV_SPI_MODE_1;	// CPOL = 0, CPHA = 1
				break;
			case 0:
			default:
				config->spi_config.mode = NRF_DRV_SPI_MODE_0;	// CPOL = 0, CPHA = 0
		}

		config->spi_config.bit_order = NRF_DRV_SPI_BIT_ORDER_MSB_FIRST;

//			config->spi_config.frequency = NRF_DRV_SPI_FREQ_8M;

		if (config->hz > 16000000)
{
ftdiTrace("32M spi");
			config->spi_config.frequency = NRF_SPIM_FREQ_32M;
}
		else if (config->hz > 8000000)
{
ftdiTrace("16M spi");
			config->spi_config.frequency = NRF_SPIM_FREQ_16M;
}
		else if (config->hz > 4000000)
			config->spi_config.frequency = NRF_SPIM_FREQ_8M;
		else if (config->hz > 2000000)
			config->spi_config.frequency = NRF_SPIM_FREQ_4M;
		else if (config->hz > 1000000)
			config->spi_config.frequency = NRF_SPIM_FREQ_2M;
		else if (config->hz > 500000)
			config->spi_config.frequency = NRF_SPIM_FREQ_1M;
		else if (config->hz > 250000)
			config->spi_config.frequency = NRF_SPIM_FREQ_500K;
		else if (config->hz > 125000)
			config->spi_config.frequency = NRF_SPIM_FREQ_250K;
		else
			config->spi_config.frequency = NRF_SPIM_FREQ_125K;
			
		ret = nrf_spi_mngr_init(&gSPI0, &config->spi_config);
		if (ret) {
			xsBeginHost(config->the);
			xsTraceLeft("spi_init - status non zero", "spi");
			xsEndHost(config->the);
		}

		gSPITxBuffer = (uint32_t *)c_malloc(MODDEF_SPI_BUFFERSIZE * 2);
		gSPIRxBuffer = (uint32_t *)(MODDEF_SPI_BUFFERSIZE + (uintptr_t)gSPITxBuffer);

		gSPIInited = true;
	}

	if (NULL == gConfig) {
		gSPIData = NULL;
		gSPIDataCount = -1;

		gConfig = config;
	}
	else
		modSPIFlush();

	(config->doChipSelect)(0, config);
}

void modSPIUninit(modSPIConfiguration config)
{
	if (config == gConfig)
		modSPIActivateConfiguration(NULL);

//@@ should only be done on last SPI client closing
	nrf_spi_mngr_uninit(&gSPI0);
	gSPIInited = false;

	config->spi_dev = NULL;
}

void modSPITxRx(modSPIConfiguration config, uint8_t *data, uint16_t count)
{
	int ret;

	modSPIActivateConfiguration(config);

	if (count > 255) {		// need to loop
		modLog("TxRx over 255 bytes unimplemented");
		return;
	}

	c_memcpy(gSPITxBuffer, data, count);
	config->transfer[0].p_tx_data = (uint8_t*)gSPITxBuffer;
	config->transfer[0].tx_length = count;
	config->transfer[0].p_rx_data = (uint8_t*)gSPIRxBuffer;
	config->transfer[0].rx_length = count;

/*
	config->transaction.begin_callback = NULL;
	config->transaction.end_callback = NULL;
	config->transaction.p_user_data = NULL;
	config->transaction.p_transfers = config->transfer;
	config->transaction.number_of_transfers = 1;
	config->transaction.p_required_spi_cfg = NULL;
*/

	ret = nrf_spi_mngr_perform(&gSPI0, NULL, config->transfer, 1, NULL);
	if (ret) {
		xsBeginHost(config->the);
		xsTraceLeft("spiTxRx - status non zero", "spi");
		xsEndHost(config->the);
	}

	c_memcpy(data, gSPIRxBuffer, count);
}

static void modSPITxCommon(modSPIConfiguration config, uint8_t *data, uint16_t count, modSPIBufferLoader loader)
{
	modSPIActivateConfiguration(config);

	gSPIBufferLoader = loader;
	gSPIData = data;
	gSPIDataCount = count;

	// start the spi transmit
	spi_callback(0, config);

	if (config->sync)
		modSPIFlush();
}
